--- a/extra/CMakeLists.txt
+++ b/extra/CMakeLists.txt
@@ -1,10 +1,10 @@
 cmake_minimum_required(VERSION 2.8)
 ADD_SUBDIRECTORY(nn)
-ADD_SUBDIRECTORY(graph)
-ADD_SUBDIRECTORY(nngraph)
-ADD_SUBDIRECTORY(nnx)
-ADD_SUBDIRECTORY(threads)
-ADD_SUBDIRECTORY(argcheck)
+#ADD_SUBDIRECTORY(graph)
+#ADD_SUBDIRECTORY(nngraph)
+#ADD_SUBDIRECTORY(nnx)
+#ADD_SUBDIRECTORY(threads)
+#ADD_SUBDIRECTORY(argcheck)
 
 IF (WITH_CUDA STREQUAL ON)
  ADD_SUBDIRECTORY(cutorch)
